Add file via upload without git cli
Only giving a contact form on bonus section.

--- a/index.html
+++ b/index.html
@@ -508,12 +508,58 @@
     <section class="bonus__section">
         <div class="row">
             <div class="col-lg-6">
-                <div class="section__title vh-100 d-flex flex-column justify-content-center align-items-center">
-                    <h1 class="display-1 text-white">
+                <div class="section__title vh-100 d-flex flex-column justify-content-center align-items-center ps-lg-5 px-md-5 px-3">
+                    <!-- <h1 class="display-1 text-white">
                         Spotify
                         <br>
                         Redesign
-                    </h1>
+                    </h1> -->
+
+                    <form class="row g-3">
+                        <div class="col-md-6">
+                            <label for="inputEmail4" class="text-white form-label">Email</label>
+                            <input type="email" class="form-control" id="inputEmail4">
+                        </div>
+                        <div class="col-md-6">
+                            <label for="inputPassword4" class="text-white form-label">Password</label>
+                            <input type="password" class="form-control" id="inputPassword4">
+                        </div>
+                        <div class="col-12">
+                            <label for="inputAddress" class="text-white form-label">Address</label>
+                            <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                        </div>
+                        <div class="col-12">
+                            <label for="inputAddress2" class="text-white form-label">Address 2</label>
+                            <input type="text" class="form-control" id="inputAddress2"
+                                placeholder="Apartment, studio, or floor">
+                        </div>
+                        <div class="col-md-6">
+                            <label for="inputCity" class="text-white form-label">City</label>
+                            <input type="text" class="form-control" id="inputCity">
+                        </div>
+                        <div class="col-md-4">
+                            <label for="inputState" class="text-white form-label">State</label>
+                            <select id="inputState" class="form-select">
+                                <option selected>Choose...</option>
+                                <option>...</option>
+                            </select>
+                        </div>
+                        <div class="col-md-2">
+                            <label for="inputZip" class="text-white form-label">Zip</label>
+                            <input type="text" class="form-control" id="inputZip">
+                        </div>
+                        <div class="col-12">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" id="gridCheck">
+                                <label class="text-white form-check-label" for="gridCheck">
+                                    Check me out
+                                </label>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <button type="submit" class="btn btn-danger w-100">Sign in</button>
+                        </div>
+                    </form>
                 </div>
             </div>
             <div class="col-lg-6">
